--- a/g9_cs1097_aecook1/app/src/main/res/layout/content_main.xml
+++ b/g9_cs1097_aecook1/app/src/main/res/layout/content_main.xml
@@ -9,6 +9,56 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gridview"
+        android:adjustViewBounds="true"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:columnWidth="10dp"
+        android:stretchMode="columnWidth"
+        android:numColumns="16"
+        android:gravity="center"
+        />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Up"
+        android:id="@+id/up"
+        android:layout_below="@+id/gridview"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Right"
+        android:id="@+id/right"
+        android:layout_alignBaseline="@+id/up"
+        android:layout_alignBottom="@+id/up"
+        android:layout_toRightOf="@+id/up"
+        android:layout_toEndOf="@+id/up" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left"
+        android:id="@+id/left"
+        android:layout_below="@+id/gridview"
+        android:layout_toRightOf="@+id/right"
+        android:layout_toEndOf="@+id/right" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Down"
+        android:id="@+id/down"
+        android:layout_below="@+id/gridview"
+        android:layout_toRightOf="@+id/left"
+        android:layout_toEndOf="@+id/left" />
+
 </RelativeLayout>
