--- a/g9_cs1097_aecook1/app/src/main/res/layout/content_main.xml
+++ b/g9_cs1097_aecook1/app/src/main/res/layout/content_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
+    android:orientation="vertical"
+    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,53 +13,64 @@
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridview"
         android:adjustViewBounds="true"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
         android:columnWidth="10dp"
         android:stretchMode="columnWidth"
         android:numColumns="16"
         android:gravity="center"
-        />
+        android:layout_weight="8" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Up"
-        android:id="@+id/up"
-        android:layout_below="@+id/gridview"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Right"
-        android:id="@+id/right"
-        android:layout_alignBaseline="@+id/up"
-        android:layout_alignBottom="@+id/up"
-        android:layout_toRightOf="@+id/up"
-        android:layout_toEndOf="@+id/up" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:text="Up"
+            android:id="@+id/up"
+            android:layout_below="@+id/gridview"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Left"
-        android:id="@+id/left"
-        android:layout_below="@+id/gridview"
-        android:layout_toRightOf="@+id/right"
-        android:layout_toEndOf="@+id/right" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:text="Right"
+            android:id="@+id/right"
+            android:layout_alignBaseline="@+id/up"
+            android:layout_alignBottom="@+id/up"
+            android:layout_toRightOf="@+id/up"
+            android:layout_toEndOf="@+id/up"
+            android:layout_weight="1" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Down"
-        android:id="@+id/down"
-        android:layout_below="@+id/gridview"
-        android:layout_toRightOf="@+id/left"
-        android:layout_toEndOf="@+id/left" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:text="Left"
+            android:id="@+id/left"
+            android:layout_below="@+id/gridview"
+            android:layout_toRightOf="@+id/right"
+            android:layout_toEndOf="@+id/right"
+            android:layout_weight="1" />
 
-</RelativeLayout>
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:text="Down"
+            android:id="@+id/down"
+            android:layout_below="@+id/gridview"
+            android:layout_toRightOf="@+id/left"
+            android:layout_toEndOf="@+id/left"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+</LinearLayout>
