--- a/g9_cs1097_aecook1/app/src/main/res/layout/content_main.xml
+++ b/g9_cs1097_aecook1/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
     android:orientation="vertical"
@@ -17,8 +17,11 @@
         android:stretchMode="columnWidth"
         android:numColumns="16"
         android:gravity="fill"
-        android:layout_weight="8" />
+        android:layout_weight="8"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp" />
 
 
-
-</LinearLayout>
+</RelativeLayout>
