trying to replay

--- a/g9_cs1097_aecook1/app/src/main/res/layout/content_home_screen.xml
+++ b/g9_cs1097_aecook1/app/src/main/res/layout/content_home_screen.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show Replay"
-        android:id="@+id/button2"
+        android:id="@+id/replay"
         android:layout_below="@+id/join"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
