--- a/g9_cs1097_aecook1/app/src/main/res/layout/content_home_screen.xml
+++ b/g9_cs1097_aecook1/app/src/main/res/layout/content_home_screen.xml
@@ -35,8 +35,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show Replay"
-        android:id="@+id/replay"
+        android:text="Exit"
+        android:id="@+id/exit_home"
         android:layout_below="@+id/join"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
